--- a/Index.html
+++ b/Index.html
@@ -3,12 +3,19 @@
         <!-- Include JQuery Library -->
         <!-- http://keith-wood.name/calendarsPicker.html -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script type=text/javascript src="js/jquery.calendars.js"></script>
-        <script type="text/javascript" src="js/jquery.plugin.js"></script> 
-        <script type="text/javascript" src="js/jquery.calendars.picker.js"></script>
-        <script type="text/javascript" src="js/jquery.calendars.ummalqura.js"></script>
-        <script type="text/javascript" src="js/jquery.calendars.plus.js"></script>
+        <script type=text/javascript src="js/jquery.calendars.min.js"></script>
+        <script type=text/javascript src="js/jquery.calendars-ar.js"></script>
+        <script type=text/javascript src="js/jquery.calendars-ar-EG.js"></script>
+        <script type="text/javascript" src="js/jquery.plugin.min.js"></script> 
+        <script type="text/javascript" src="js/jquery.calendars.picker.min.js"></script>
+        <script type="text/javascript" src="js/jquery.calendars.picker-ar.js"></script>
+        <script type="text/javascript" src="js/jquery.calendars.picker-ar-EG.js"></script>
+        <script type="text/javascript" src="js/jquery.calendars.picker.lang.min.js"></script>
+        <script type="text/javascript" src="js/jquery.calendars.ummalqura.min.js"></script>
+        <script type="text/javascript" src="js/jquery.calendars.ummalqura-ar.js"></script>
+        <script type="text/javascript" src="js/jquery.calendars.plus.min.js"></script>
         <script type="text/javascript" src="js/angular.min.js"></script>
+        
         <script type="text/javascript" src="js/module.js"></script>
         <script type="text/javascript" src="datepicker/datepicker.js"></script>
         
@@ -18,7 +25,40 @@
     <body ng-app="app">
         <div ng-controller="mainController">
             <p>{{greeting}}</p>
-            <common-datepicker config="datepickerconfig"></common-datepicker>
+            <p>Arabic and Umm alqura</p>
+            <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model="date" 
+                   calendarType="ummalqura"
+                   language="ar"
+                   dateFormat="yyyy/mm/dd"
+                   kdatepicker />
+            <br>
+            <p>English and Umm alqura</p>
+            <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model="date" 
+                   calendarType="ummalqura"
+                   language="en"
+                   dateFormat="yyyy/mm/dd"
+                   kdatepicker />
+            <br>
+            <p>Arabic and Gregorian</p>
+            <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model="date" 
+                   calendarType="gregorian"
+                   language="ar"
+                   dateFormat="yyyy/mm/dd"
+                   kdatepicker />
+            <br>
+            <p>Arabic Egypt and Gregorian</p>
+            <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model="date" 
+                   calendarType="gregorian"
+                   language="ar-EG"
+                   dateFormat="yyyy/mm/dd"
+                   kdatepicker />
+            <br>
+            <p>English and Gregorian</p>
+            <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model="date" 
+                   calendarType="gregorian"
+                   language="en"
+                   dateFormat="yyyy/mm/dd"
+                   kdatepicker />
         </div>
      </body>
 </html>
