Update angular library to support default date selection

--- a/Index.html
+++ b/Index.html
@@ -26,35 +26,35 @@
         <div ng-controller="mainController">
             <p>{{greeting}}</p>
             <p>Arabic and Umm alqura</p>
-            <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model="date" 
+            <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model="date1" 
                    calendarType="ummalqura"
                    language="ar"
                    dateFormat="yyyy/mm/dd"
                    kdatepicker />
             <br>
             <p>English and Umm alqura</p>
-            <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model="date" 
+            <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model="date2" 
                    calendarType="ummalqura"
                    language="en"
                    dateFormat="yyyy/mm/dd"
                    kdatepicker />
             <br>
             <p>Arabic and Gregorian</p>
-            <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model="date" 
+            <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model="date3" 
                    calendarType="gregorian"
                    language="ar"
                    dateFormat="yyyy/mm/dd"
                    kdatepicker />
             <br>
             <p>Arabic Egypt and Gregorian</p>
-            <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model="date" 
+            <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model="date4" 
                    calendarType="gregorian"
                    language="ar-EG"
                    dateFormat="yyyy/mm/dd"
                    kdatepicker />
             <br>
             <p>English and Gregorian</p>
-            <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model="date" 
+            <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model="date5" 
                    calendarType="gregorian"
                    language="en"
                    dateFormat="yyyy/mm/dd"
