rename to kdatepicker.js

--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
         <script type="text/javascript" src="js/angular.min.js"></script>
         
         <script type="text/javascript" src="js/module.js"></script>
-        <script type="text/javascript" src="datepicker/datepicker.js"></script>
+        <script type="text/javascript" src="datepicker/kdatepicker.js"></script>
         
         <link rel="stylesheet" type="text/css" href="css/jquery.calendars.picker.css"> 
     </head>
