Update display format of first input

--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
             <input type="text" id="popupDatePicker" class="is-calendarPicker" ng-model='date1' 
                    calendarType="ummalqura"
                    language="ar"
-                   dateFormat="yyyy/mm/dd"
+                   dateFormat="MM dd, yyyy"
                    showOnFocus = "true"
                    kdatepicker />
             <br>
